--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
         {% endif %}
 
         {% if site.github.is_user_page %}
-        <p class="view"><a href="{{ site.github.owner_url }}">View My GitHub Profile</a></p>
+        <p class="view"><a href="https://scholar.google.co.in/citations?user=5sq_tY0AAAAJ&hl=en">View My Google Scholar Profile</a></p>
         {% endif %}
 
       </header>
